--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -70,6 +69,7 @@
                             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#benefits"><span>Benefits</span></a></li>
                             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#wedont"><span>What we don't do</span></a></li>
                             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact"><span>Contact us</span></a></li>
+							<a href="#" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Login</a>
                         </ul>
                     </div>
                 </div>
@@ -90,8 +90,8 @@
                             <h1 class="wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0s">Smart Automated<br> Time Tracking.</h1>
                             <p class="wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.3s">Using AI to provide the balance between transparency of what’s being worked on and building timesheets automatically and accurately.</p>
 							<div class="custom-btn-group hover-effect-parent2 wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.3s">
-								<a href="#subscribe" class="custom-btn-2 border-radius-30 hover-effect-child2 active mb-2 mb-lg-0 mr-lg-3">Subscribe</a>
-								<a href="#benefits" class="custom-btn border-radius-30 hover-effect-child2">Find out more</a>
+								<a href="#" class="custom-btn-2 border-radius-30 hover-effect-child2 active mb-2 mb-lg-0 mr-lg-3">Login</a>
+								<a href="#subscribe" class="custom-btn border-radius-30 hover-effect-child2">Subscribe</a>
 							</div>
                         </div>
                     </div>    
@@ -101,7 +101,7 @@
         <div class="banner-image-content d-flex align-items-center justify-content-center justify-content-lg-start">
             <div class="banner-image pr--30 pl--30 pl-lg-0">
                 <div class="banner-image  wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.3s">
-                    <img class="img1" src="assets/images/banner/image-1.png" alt="image">
+                    <img src="assets/images/illustrations/hero-graphic.svg" alt="image">
                 </div>
             </div>
         </div>
@@ -201,7 +201,7 @@
 								</div>
                                 <div class="content">
                                     <h6 class="font-weight-bold mb-2 mt-0">Transparency</h6>
-                                    <p>Removing the level of manual time spent creating and managing timesheets.</p>
+                                    <p>Understand how your teams’ time is being spent, no matter where they are working from.</p>
                                 </div>
                             </div>
 
@@ -229,8 +229,8 @@
                 </div>
 				
                 <div class="col-lg-7 order-lg-first pr_lg--100">
-                    <div class="screenshot-image image1 wow fadeInLeft" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <img src="assets/images/banner/image-2.png" alt="image">
+                    <div class="screenshot-image image1 wow fadeInLeft d-none d-lg-block" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.2s">
+						<img src="assets/images/illustrations/benefits-graphic.svg" alt="image">
                     </div>
                 </div>    
             </div>
@@ -347,8 +347,8 @@
                 </div>
 				
                 <div class="col-lg-7 pl_lg--100">
-                    <div class="screenshot-image image2 wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <img src="assets/images/banner/image-2.png" alt="image">
+                    <div class="screenshot-image image2 wow fadeInUp d-none d-lg-block" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.2s">
+						<img class="t" src="assets/images/illustrations/scale-graphic.svg" alt="image">
                     </div>
                 </div>    
             </div>
