Added gitignore. Remove test text from contact form.

--- a/index.html
+++ b/index.html
@@ -408,12 +408,12 @@
                     <form class="contact-form">
                         <div class="row">
                             <div class="col-lg-6 mb--30 mb-lg-0">
-                                <input type="text" name="name" id="contact-form-name" placeholder="*Name" value="Test" required>
-                                <input type="email" name="email" id="contact-form-email" placeholder="*Email" value="test@jsnelders.com" required>
-                                <input type="text" name="subject" id="contact-form-subject" placeholder="*Subject" value="Hi!" required>
+                                <input type="text" name="name" id="contact-form-name" placeholder="*Name" value="" required>
+                                <input type="email" name="email" id="contact-form-email" placeholder="*Email" value="" required>
+                                <input type="text" name="subject" id="contact-form-subject" placeholder="*Subject" value="" required>
                             </div>  
                             <div class="col-lg-6">
-                                <textarea placeholder="*Message" id="contact-form-message" required>I'm in your webs</textarea>
+                                <textarea placeholder="*Message" id="contact-form-message" required></textarea>
                             </div> 
                             <div class="col-12 text-center pt--50">
                                 <button type="submit" id="contact-form-submit" input-type="submit" data-toggle="modal" data-target="#contactModal">Submit</button>
