--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<title>Lotus AI - Smart Automated Time Tracking</title>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-168565365-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-168565365-1');
+		</script>
 		
 		<!-- Favicon  -->
 		<link rel="icon" href="favicon.png" type="image/x-icon">
@@ -20,6 +30,7 @@
 		<link rel="stylesheet" href="assets/css/themify-icons.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 		<!-- Styles End -->
+
 	</head>
 
 	<body id="top-page">
