--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 
 		<!-- Subscribe -->
-		<!-- <section id="subscribe" class="pt--100 pb--50">
+		<section id="subscribe" class="pt--100 pb--50">
 			<div class="container">
 				<div class="container-sm">
 					<div class="section-header text-center mb--60">
@@ -386,7 +386,7 @@
 					</form>
 				</div>
 			</div>
-		</section> -->
+		</section>
 			<!-- Subscribe Modal -->
 			<div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered" role="document">
