Verification meta tag for Have I Been Pwned

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
+		<meta name="have-i-been-pwned-verification" value="adf1f926d4d89fb03baf219a1f8a32f9">
+		
 		<title>Lotus AI - Smart Automated Time Tracking</title>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
