Hiding the loading dots thingy. There's no need for them.

--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
 	<body id="top-page">
 
 		<!-- Preloader -->
-		<div id="loading">
+		<!-- 22/08/2020[JS]: Hiding this. There's absolutely no reason for it. -->
+		<!-- <div id="loading">
 			<div id="loading-center">
 				<div id="loading-center-absolute">
 					<div class="object" id="first_object"></div>
 					<div class="object" id="second_object" style="float:right;"></div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- Preloader End -->
 
 
