--- a/download/windows.html
+++ b/download/windows.html
@@ -37,7 +37,7 @@
 								<div class="installation-instructions closed" style="display: none;">
 									<ol>
 										<li>
-											If you you not already done so, first <a href="https://portal.lotusai.co/forgot-password">reset your password</a> for the 
+											If you you not already done so, first <a style="color: blue;" href="https://portal.lotusai.co/forgot-password">reset your password</a> for the 
 											email you originally signed up with or were provided.
 										</li>
 										<li>
