--- a/download/windows.html
+++ b/download/windows.html
@@ -41,7 +41,7 @@
 											email you originally signed up with or were provided.
 										</li>
 										<li>
-											Download the current version of teh software agent using the button above.
+											Download the current version of the software agent using the button above.
 										</li>
 										<li>
 											Unzip (extract) the <strong>Lotus AI - Windows Agent - x.x.x.zip</strong> file to a folder on your PC. 
