--- a/download/windows.html
+++ b/download/windows.html
@@ -71,7 +71,7 @@
 									<img src="img/install-4.jpg"/>
 									<p>Double-click the icon to show the main window again. To exit the application and stop all monitoring, right click on the icon, and select the Exit option. It may take a moment to close as it finishes synchronising with the Lotus AI server. </p>
 								</div>
-								<span class="yellow read-installation-instructions"><img src="img/menu.svg" width="15" class="mr-2" /> <span class="read-installation-text">Read installion instructions</span></span>
+								<span class="yellow read-installation-instructions"><img src="img/menu.svg" width="15" class="mr-2" /> <span class="read-installation-text">Read installation instructions</span></span>
 						</div>
 					</div>
 				</div>
