--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#benefits"><span>Benefits</span></a></li>
 								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#wedont"><span>What we don't do</span></a></li>
 								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact"><span>Contact us</span></a></li>
-								<a href="https://lotusai-production-portal.azurewebsites.net/Login" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Login</a>
+								<a href="https://portal.lotusai.co/login" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Login</a>
 							</ul>
 						</div>
 					</div>
