--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<h1 class="wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0s">Smart Automated<br> Time Tracking</h1>
 								<p class="wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.3s">Using AI to provide the balance between transparency of what’s being worked on and building timesheets automatically and accurately.</p>
 								<div class="custom-btn-group hover-effect-parent2 wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.3s">
-									<a href="https://lotusai-production-portal.azurewebsites.net/Login" class="custom-btn-2 border-radius-30 hover-effect-child2 active mb-2 mb-lg-0 mr-lg-3">Login</a>
+									<a href="https://portal.lotusai.co/login" class="custom-btn-2 border-radius-30 hover-effect-child2 active mb-2 mb-lg-0 mr-lg-3">Login</a>
 									<!-- <a href="#subscribe" class="custom-btn border-radius-30 hover-effect-child2">Subscribe</a> -->
 								</div>
 							</div>
