--- a/signup/index.html
+++ b/signup/index.html
@@ -255,7 +255,7 @@
 	<!-- include number spinner -->
 	<script src="js/_bootstrap-input-spinner.js" type="text/javascript"></script>
 	
-	
+	<script src="/config.js"></script>
 	<script src="js/app.js"></script>
 </body>
 
