--- a/index.html
+++ b/index.html
@@ -77,12 +77,16 @@
 								</span>
 							</div>
 							<ul class="custom-border-top nav-menu d-lg-flex flex-wrap list-unstyled mr_lg--50  mb-0 justify-content-center">
-								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#top-page"><span>Home</span></a>
-								</li>
+								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#top-page"><span>Home</span></a></li>
 								<li class="nav-item"><a class="nav-link js-scroll-trigger active" href="#features"><span>Key features</span></a></li>
 								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#benefits"><span>Benefits</span></a></li>
 								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#wedont"><span>What we don't do</span></a></li>
 								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact"><span>Contact us</span></a></li>
+
+								<li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="/signup/"><span>Sign Up</span></a></li>
+								<li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="https://portal.lotusai.co/login"><span>Login</span></a></li>
+
+								<a href="/signup/" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Sign-up</a>
 								<a href="https://portal.lotusai.co/login" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Login</a>
 							</ul>
 						</div>
@@ -104,7 +108,7 @@
 								<h1 class="wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0s">Smart Automated<br> Time Tracking</h1>
 								<p class="wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.3s">Using AI to provide the balance between transparency of what’s being worked on and building timesheets automatically and accurately.</p>
 								<div class="custom-btn-group hover-effect-parent2 wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.3s">
-									<a href="https://portal.lotusai.co/login" class="custom-btn-2 border-radius-30 hover-effect-child2 active mb-2 mb-lg-0 mr-lg-3">Login</a>
+									<a href="/signup/" class="custom-btn-2 border-radius-30 hover-effect-child2 active mb-2 mb-lg-0 mr-lg-3">Sign-up</a>
 									<!-- <a href="#subscribe" class="custom-btn border-radius-30 hover-effect-child2">Subscribe</a> -->
 								</div>
 							</div>
