Signup word fix

--- a/signup/index.html
+++ b/signup/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Sign-up To Lotus AI</title>
+    <title>Sign up To Lotus AI</title>
 </head>
 
 <body class="page-sheet bg-signup-repeat">
