Fixed windows download page title.

--- a/download/windows.html
+++ b/download/windows.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Downlaod Lotus</title>
+    <title>Download Lotus AI - Windows Agent</title>
 </head>
 
 <body class="page-sheet bg-signup-repeat">
