--- a/download/windows.html
+++ b/download/windows.html
@@ -23,9 +23,9 @@
 
 								<h3 class="yellow">Download Lotus</h3>
 
-								<a class="btn bg-primary text-white w-100 mb-3 mt-2" name="submit1" href="/agent/windows/Lotus AI - Windows Agent - Beta 2.7.0.zip">
+								<a class="btn bg-primary text-white w-100 mb-3 mt-2" name="submit1" href="/agent/windows/LotusAI-WindowsAgent-2.8.2-x64">
 									<img src="img/login-dark.svg" width="20" alt="download" style="transform: rotate(90deg)">
-									Download Windows Agent (v2.7.0)
+									Download Windows Agent (v2.8.1) (64-bit)
 								</a>
 								
 								<hr class="mb-4" />
@@ -44,7 +44,7 @@
 											Download the current version of the software agent using the button above.
 										</li>
 										<li>
-											Unzip (extract) the <strong>Lotus AI - Windows Agent - x.x.x.zip</strong> file to a folder on your PC. 
+											Unzip (extract) the <strong>LotusAI-WindowsAgent-x.x.x.zip</strong> file to a folder on your PC. 
 											It will contain 2 files: <strong>setup.exe</strong> (“Application”) and <strong>setup.msi</strong> (“Windows Installer Package”).
 										</li>
 										<li>
