--- a/download/windows.html
+++ b/download/windows.html
@@ -23,7 +23,7 @@
 
 								<h3 class="yellow">Download Lotus</h3>
 
-								<a class="btn bg-primary text-white w-100 mb-3 mt-2" name="submit1" href="/agent/windows/LotusAI-WindowsAgent-2.8.2-x64">
+								<a class="btn bg-primary text-white w-100 mb-3 mt-2" name="submit1" href="/agent/windows/LotusAI-WindowsAgent-2.8.2-x64.zip">
 									<img src="img/login-dark.svg" width="20" alt="download" style="transform: rotate(90deg)">
 									Download Windows Agent (v2.8.1) (64-bit)
 								</a>
