--- a/why/index1.html
+++ b/why/index1.html
@@ -9,6 +9,23 @@
 </head>
 <body class="page-sheet page-flyer">
 	
+	<!-- Modal -->
+	<div class="modal fade" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog" role="document">
+		<div class="modal-content p-3">
+		  <div class="modal-header"> 
+			<h5 class="modal-title yellow" id="exampleModalLabel">How Lotus.ai works</h5>
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			  <span aria-hidden="true">&times;</span>
+			</button>
+		  </div>
+		  <div class="modal-body">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/7MrZdK4Y8qQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		  </div>
+		</div>
+	  </div>
+	</div>
+	
 	<div class="LotusFlyer">
 		<div class="container">
 			<div class="row">
@@ -16,7 +33,7 @@
 					<div class="col-12 col-lg-8 col-md-12 col-sm-12 ml-0">
 						<img src="img/logo-dark.svg" />
 						<h1 class="text-white">Transparency of staff productivity in our new working-from-home economy - SOLVED!</h1>
-						<p class="mt-4">Manage company time with automated productivity reporting and support your staff with extended insights into how their time is spent. </p>
+						<p class="mt-4">Manage company time with automated productivity reporting and support your staff with extended insights into how their time is spent.</p>
 					</div>
 					<div class="col-12 mt-5">
 						<div class="view-options">
@@ -45,6 +62,7 @@
 									<a href="https://lotusai.co/" class="float-right mb-5 mt-3 getlotus-button"><img src="img/logo-dark-icon.svg" height="20" /> Get Lotus.ai today</a>
 								</div>
 							</div>
+							<!-- <h1 class="mt-5 mb-5" id="dynamicdata_1">Keep track of your company’s hours without<br class="d-none d-md-block hide-small"> the blah lorem ipsum dolor sit amet line for a CEO.</h1> -->
 							<h1 class="mt-5 mb-5" id="dynamicdata_1">Auditable at a granular level, automated activity logs provide confidence that your compliance needs are covered.</h1>
 							<div class="row">
 								<div class="col-12 col-md-3">
@@ -72,7 +90,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row showvideo">
+		<div class="row showvideo" data-toggle="modal" data-target="#basicExampleModal">
 			<div class="container">
 			</div>
 		</div>
@@ -121,26 +139,28 @@
 		</div>
 		<div class="container container-footer">
 			<div class="row">
-				<div class="col-lg-6 col-12 mb-3">
+				<div class="col-12">
 					<img src="img/logo-dark-full.svg" width="125" class="mb-5 mt-3" />
-<!--
-					<h3>Get the newsletter</h3>
-					<form name="newsletter" class="mb-5">
-						<input type="email" placeholder="your@email.com" />
-						<button><img src="img/logo-white-icon.png" height="20" class="mr-2" />Signup</button>
-					</form>
--->
 				</div>
 				<div class="col-lg-6 col-12 mb-3">
 					<h3>Have any questions?</h3>
 					<h5 class="font-weight-light"><a class="text-white-50" href="https://lotusai.co/#contact">Reach out</a> to our team today to find out more.</h5>
 				</div>
+				<div class="col-lg-6 col-12 mb-3">
+					<h3>Get the newsletter</h3>
+					<form name="newsletter" class="mb-5" id="subscribe-form">
+						<input type="email" placeholder="your@email.com" id="subscribe-form-email" />
+						<button type="submit" id="subscribe-form-submit"><img src="img/logo-white-icon.png" height="20" class="mr-2" />Signup</button>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
 
+
+
 	<script src="js/vendor.js"></script>
-	
+
 	<!-- include full JQuery -->
 	<script src="https://code.jquery.com/jquery-3.1.0.js" type="text/javascript"></script>
 
