Updated Windows download file link, and install instructions.

--- a/download/windows.html
+++ b/download/windows.html
@@ -23,9 +23,9 @@
 
 								<h3 class="yellow">Download Lotus</h3>
 
-								<a class="btn bg-primary text-white w-100 mb-3 mt-2" name="submit1" href="/agent/windows/LotusAI-WindowsAgent-2.8.5-x64.zip">
+								<a class="btn bg-primary text-white w-100 mb-3 mt-2" name="submit1" href="https://lotusai.co/download/windows/LotusAI-WindowsAgent-x64-2.8.11.0.msi">
 									<img src="img/login-dark.svg" width="20" alt="download" style="transform: rotate(90deg)">
-									Download Windows Agent (v2.8.5) (64-bit)
+									Download Windows Agent (v2.8.11) (64-bit)
 								</a>
 								
 								<hr class="mb-4" />
@@ -37,24 +37,25 @@
 								<div class="installation-instructions closed" style="display: none;">
 									<ol>
 										<li>
-											If you you not already done so, first <a style="color: blue;" href="https://portal.lotusai.co/forgot-password">reset your password</a> for the 
-											email you originally signed up with or were provided.
+											If you you have not already done so, first <a style="color: blue;" href="https://portal.lotusai.co/forgot-password">reset your password</a> for the 
+											email you originally signed up with (or provided to us).
 										</li>
 										<li>
 											Download the current version of the software agent using the button above.
 										</li>
 										<li>
-											Unzip (extract) the <strong>LotusAI-WindowsAgent-x.x.x.zip</strong> file to a folder on your PC. 
-											It will contain 2 files: <strong>setup.exe</strong> (“Application”) and <strong>setup.msi</strong> (“Windows Installer Package”).
+											The downloaded file is a “Windows Installer Package” file that will install the Agent software.<br>
+											Run this file.
 										</li>
 										<li>
-											Run the <strong>setup.exe</strong> file (not the .msi file).
+											Follow the installation prompts to complete the installation.<br>
+											During the process Windows may warn and prompt about protecting you from running an unknown file.<br>
+											If it is a message from "Microsoft Defender SmartScreen" select the "More info" link then select "Run Anyway".<br>
+											Other types of prompts may contains a "Yes or "Continue" button to select.<br>
+											In any case you should see information the Publisher is "Lotus AI Pty Ltd".
 										</li>
 										<li>
-											Follow the installation prompts to complete the installation.
-										</li>
-										<li>
-											A shortcut with the following icon will appear on your desktop and in your Start menu.<br><img class="w-25" src="img/install-1.jpg"/>
+											After installation a shortcut with the following icon will appear on your Desktop and in your Start menu.<br><img class="w-25" src="img/install-1.jpg"/>
 										</li>
 										<li>
 											Run the application.
@@ -85,8 +86,8 @@
 									
 									<p>
 										Double-click the icon to show the main window again. <br><br>
-										To exit the application and stop all monitoring, right click on the icon, and select the Exit option. <br><br>
-										It may take a moment to close as it finishes synchronising with the Lotus AI server.
+										To <b>exit</b> the application and stop all monitoring, right click on the icon, and select the Exit option. <br><br>
+										It may take a moment to close as it finishes synchronising your last activity with the Lotus AI server.
 									</p>
 								</div>
 								<span class="yellow read-installation-instructions"><img src="img/menu.svg" width="15" class="mr-2" /> <span class="read-installation-text">Read installation instructions</span></span>
