Changed /login to portal home page

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact"><span>Contact us</span></a></li>
 
 								<li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="/signup/"><span>Sign Up</span></a></li>
-								<li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="https://portal.lotusai.co/login"><span>Login</span></a></li>
+								<li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="https://portal.lotusai.co/"><span>Login</span></a></li>
 
 								<a href="/signup/" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Sign-up</a>
-								<a href="https://portal.lotusai.co/login" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Login</a>
+								<a href="https://portal.lotusai.co/" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Login</a>
 							</ul>
 						</div>
 					</div>
