--- a/download/windows.html
+++ b/download/windows.html
@@ -27,6 +27,7 @@
 									<img src="img/login-dark.svg" width="20" alt="download" style="transform: rotate(90deg)">
 									Download Windows Agent (v2.8.18) (64-bit)
 								</a>
+								<!-- Trigger deploy -->
 								
 								<hr class="mb-4" />
 
