Small text fixes.

--- a/download/windows.html
+++ b/download/windows.html
@@ -21,7 +21,7 @@
 						<div class="col-md-11 col-12 pr-md-5 p-5">
 								<img src="img/dark-logo.svg" width="120" alt="logo" class="pb-5" />
 
-								<h3 class="yellow">Download Lotus</h3>
+								<h3 class="yellow">Download Lotus AI Agent</h3>
 
 								<a class="btn bg-primary text-white w-100 mb-3 mt-2" name="submit1" href="https://lotusai.co/download/windows/LotusAI-WindowsAgent-x64-2.8.25.0.msi">
 									<img src="img/login-dark.svg" width="20" alt="download" style="transform: rotate(90deg)">
@@ -33,12 +33,12 @@
 
 								<h5>How to install in Windows</h5>
 
-								<p class="font-weight-light">There's a few steps to follow when installing Lotus.ai</p>
+								<p class="font-weight-light">There's a few steps to follow when installing Lotus AI</p>
 
 								<div class="installation-instructions closed" style="display: none;">
 									<ol>
 										<li>
-											If you you have not already done so, first <a style="color: blue;" href="https://portal.lotusai.co/forgot-password">reset your password</a> for the 
+											If you have not already done so, first <a style="color: blue;" href="https://portal.lotusai.co/forgot-password">reset your password</a> for the 
 											email you originally signed up with (or provided to us).
 										</li>
 										<li>
