--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
 								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#wedont"><span>What we don't do</span></a></li>
 								<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact"><span>Contact us</span></a></li>
 
-								<li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="/signup/"><span>Sign Up</span></a></li>
-								<li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="https://portal.lotusai.co/login"><span>Login</span></a></li>
+								<!-- <li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="/signup/"><span>Sign Up</span></a></li> -->
+								<li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="#sign-up"><span>Sign Up</span></a></li>
+								<li class="nav-item d-xl-none d-lg-none"><a class="nav-link js-scroll-trigger" href="https://portal.lotusai.co/"><span>Login</span></a></li>
 
-								<a href="/signup/" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Sign-up</a>
-								<a href="https://portal.lotusai.co/login" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Login</a>
+								<!-- <a href="/signup/" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Sign-up</a> -->
+								<a href="#sign-up" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block js-scroll-trigger">Sign-up</a>
+								<a href="https://portal.lotusai.co/" class="nav-btn border-radius-30 hover-effect-child2 active mb-2 d-none d-lg-block">Login</a>
 							</ul>
 						</div>
 					</div>
@@ -108,7 +110,8 @@
 								<h1 class="wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0s">Smart Automated<br> Time Tracking</h1>
 								<p class="wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.3s">Using AI to provide the balance between transparency of what’s being worked on and building timesheets automatically and accurately.</p>
 								<div class="custom-btn-group hover-effect-parent2 wow fadeInUp" data-wow-offset="10" data-wow-duration="1s" data-wow-delay="0.3s">
-									<a href="/signup/" class="custom-btn-2 border-radius-30 hover-effect-child2 active mb-2 mb-lg-0 mr-lg-3">Sign-up</a>
+									<!-- <a href="/signup/" class="custom-btn-2 border-radius-30 hover-effect-child2 active mb-2 mb-lg-0 mr-lg-3">Sign-up</a> -->
+									<a href="#sign-up" class="custom-btn-2 border-radius-30 hover-effect-child2 active mb-2 mb-lg-0 mr-lg-3">Sign-up</a>
 									<!-- <a href="#subscribe" class="custom-btn border-radius-30 hover-effect-child2">Subscribe</a> -->
 								</div>
 							</div>
@@ -415,16 +418,49 @@
 		<!-- Subscribe End -->
 
 
+		<!-- Sign Up -->
+		<section id="sign-up" class="sign-up-section">
+			<div class="container roundShape2">
+				<div class="contact-wrapper">
+					<div class="section-header text-center mb--50">
+						<h3>Sign Up</h3>
+					</div>
+					<div class="sign-up">
+						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+						<script>
+						  hbspt.forms.create({
+							region: "na1",
+							portalId: "7928893",
+							formId: "afe81f10-c34f-4336-97bb-9077f16a7809"
+						});
+						</script>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
 
 		<!-- Contact Us -->
-		<section id="contact" class="contact-section">
+		<section id="contact" class="contact-section pt--100 ">
 			<div class="container roundShape2">
 				<div class="contact-wrapper">
 					<div class="section-header text-center mb--50">
 						<h3>Contact us</h3>
 					</div>
 					<div class="contact">
-						<form class="contact-form">
+
+						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+						<script>
+						  hbspt.forms.create({
+							region: "na1",
+							portalId: "7928893",
+							formId: "ba1fbae4-76a6-4ae2-aa59-11c42c4bb0cf"
+						});
+						</script>
+
+						
+						<!-- <form class="contact-form">
 							<div class="row">
 								<div class="col-lg-6 mb--30 mb-lg-0">
 									<input type="text" name="name" id="contact-form-name" placeholder="*Name" value="" required>
@@ -438,11 +474,14 @@
 									<button type="submit" id="contact-form-submit" input-type="submit" data-toggle="modal" data-target="#contactModal">Submit</button>
 								</div> 
 							</div>
-						</form>
+						</form> -->
 					</div>
 				</div>
 			</div>
 		</section>
+
+
+
 			<!-- Contact Modal -->
 			<div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered" role="document">
